--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "hexo-theme-arknights",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "hexo generate",
@@ -19,11 +19,9 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-sass": "^0.4.0",
-    "hexo-renderer-stylus": "^1.1.0",
     "hexo-renderer-ts": "^1.2.5",
     "hexo-server": "^1.0.0"
   }
